# nMarkdown

./: .gitignore  CMakeLists.txt  Makefile  Makefile.ndless  PLAN.md  README.md  THIRD_PARTY_NOTICES.md
assets/: core-font-pack.json  core.fpk  core.mfm  math-font-defaults.json
assets/fonts/: DejaVu-CX.unicodes  DejaVuSans-UI.unicodes  LICENSE_STIX_TWO  SarasaFixedSC-CX.unicodes  UPSTREAM.md
docs/: LARGE_TXT_PERFORMANCE.md  MATH_SUPPORT.md  MEMORY_PROFILE.md  NAVIGATION_DESIGN.md  UI_UX_AUDIT_2026-07-14.md  UI_UX_AUDIT_BLOCKERS_2026-07-14.md  UI_UX_AUDIT_COMPLETION_2026-07-14.md  UI_UX_AUDIT_EVIDENCE_2026-07-14.md  UI_UX_AUDIT_PLAN.md  UI_UX_AUDIT_RESOLUTION_2026-07-14.md  USER_GUIDE.md
include/nmarkdown/app/: application.h  viewer.h
include/nmarkdown/document/: document_ir.h  entity.h  markdown.h  search.h  state.h  text_encoding.h  unicode.h  utf8.h
include/nmarkdown/io/: block_cached_random_access.h  memory_random_access.h  random_access.h
include/nmarkdown/layout/: block_layout.h  fenwick.h  fixed.h  plain_text_layout.h
include/nmarkdown/math/: math_atoms.h  math_layout.h  math_lexer.h  math_macros.h  math_parser.h  math_system.h
include/nmarkdown/platform/: allocation_stats.h  platform.h
include/nmarkdown/platform/ndless/: display_sync.h
include/nmarkdown/render/: primitives.h  surface565.h
include/nmarkdown/text/: compositor.h  font.h  font_catalog.h  font_pack.h  glyph_cache.h  harfbuzz_shaper.h  render_style.h  text_renderer.h  text_shaper.h  text_system.h
samples/: format-gallery.md  imath-jmath.md  link-choice.md  math-complex-review.md  math-formula-coverage.md  math-gallery.md  math-large-align.md  math-symbol-gallery.md  mixed-cjk-math.md  phase0.md  phase2.md  phase4.md  plain-reader-controls.md
src/app/: application.cpp  viewer.cpp
src/document/: document_ir.cpp  entity.cpp  legacy_gbk_table.inc  legacy_jis0212_table.inc  legacy_shift_jis_table.inc  markdown.cpp  search.cpp  state.cpp  text_encoding.cpp  unicode.cpp  utf8.cpp
src/layout/: block_layout.cpp  fenwick.cpp  plain_text_layout.cpp
src/math/: math_atoms.cpp  math_layout.cpp  math_lexer.cpp  math_macros.cpp  math_parser.cpp  math_symbol_table.inc  math_system.cpp
src/platform/: stdio_files.cpp
src/platform/desktop/: clock_desktop.cpp  clock_desktop.h  display_desktop.cpp  display_desktop.h  input_desktop.cpp  input_desktop.h  main.cpp
src/platform/ndless/: clock_ndless.cpp  clock_ndless.h  display_ndless.cpp  display_ndless.h  firebird_font_fixture.h  input_ndless.cpp  input_ndless.h  main.cpp
src/render/: primitives.cpp  surface565.cpp
src/text/: compositor.cpp  font.cpp  font_catalog.cpp  font_pack.cpp  glyph_cache.cpp  harfbuzz_shaper.cpp  text_renderer.cpp  text_system.cpp
tests/: test_block_layout.cpp  test_clock_ndless.cpp  test_display_sync.cpp  test_fenwick.cpp  test_font_catalog.cpp  test_font_pack.cpp  test_input_ndless.cpp  test_markdown.cpp  test_math_golden.cpp  test_math_layout.cpp  test_math_parser.cpp  test_menu_layout.cpp  test_phase0.cpp  test_plain_text_layout.cpp  test_search.cpp  test_state.cpp  test_stdio_rename_fallback.cpp  test_text.cpp  test_text_encoding.cpp  test_unicode.cpp  test_utf8.cpp  test_viewer_interactions.cpp
tests/fake_ndless/: libndls.h
tools/entities/: generate_entities.py
tools/firebird/: ESC_LIVENESS.md  FIREBIRD_REAL_NOVEL_GUI.md  build-font-fixture.mjs  compare-server.mjs  embed-document.mjs  esc_liveness_lowlevel_probe.cpp  esc_liveness_main.cpp  keymap_input_probe.cpp  oversized_formula_input_probe.cpp  scroll_swipe_input_probe.cpp  theme_touch_input_probe.cpp  toc_input_probe.cpp  verify-esc-liveness.mjs  verify-imath.mjs  verify-keymap.mjs  verify-progress.mjs  verify-real-novel-gui.mjs  verify-real-novel-gui.test.mjs  verify-symbols.mjs  verify.mjs
tools/firebird/patches/: firebird-gui-touchpad.patch  firebird-real-novel-gui-harness.patch
tools/firebird/web/: compare.js  index.html  styles.css
tools/fontpack/: cjk_core_unicodes.mjs  fontpack.py  math_metadata.py
tools/memory/: ndless_allocation_probe.cpp
tools/perf/: large_txt_bench.cpp
tools/unicode/: generate_unicode_tables.py
